# GBC-Emulator

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main-workflow.yml
application/: CMakeLists.txt
application/src/: application.cpp  application.h  common.h  lcd_renderer.cpp  lcd_renderer.h  main.cpp
application/src/debug/: cpu.cpp  cpu.h  disassembly.cpp  disassembly.h  io_registers.cpp  io_registers.h  lcd.cpp  lcd.h  memory.cpp  memory.h  stack.cpp  stack.h  tiledata.cpp  tiledata.h  tilemap.cpp  tilemap.h
application/src/opengl/: debug.cpp  debug.h  texture.cpp  texture.h
application/src/windowing/: event_emitter.h  glfw_init.cpp  glfw_init.h  imgui_build.cpp  imgui_init.cpp  imgui_init.h  input.cpp  input.h  message_queue.cpp  message_queue.h  window.cpp  window.h  window_manager.cpp  window_manager.h
core/: CMakeLists.txt
core/src/: bus.cpp  bus.h  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  divider.h  gbc.cpp  gbc.h  io_registers.cpp  io_registers.h  ppu.cpp  ppu.h  timer.cpp  timer.h
core/src/mbc/: mbc1.cpp  mbc1.h  rom.cpp  rom.h
core/src/util/: assert.h  clipped_register.h  common.cpp  common.h  log.cpp  log.h
scripts/: GenerateLinuxProjects.sh  RunFormatter.sh  generate_test_rom.py
tests/: CMakeLists.txt
tests/src/: blargg_cpu_instrs.cpp  common.h  gbc_access.h  instruction_timing.cpp  main.cpp  mooneye.cpp
